# secs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
SECS/: engine.hpp  entity.hpp  entity_id.hpp  entity_manager.hpp  utility.hpp
SECS/collections/: sparse_map.hpp  vector.hpp  view.hpp
SECS/collections/impl/: sparse_map.inl  vector.inl  view.inl
SECS/impl/: engine.inl  entity.inl  entity_manager.inl
SECS/utility/: math.hpp  memory.hpp  range.hpp  repeat.hpp  type_id.hpp  type_utils.hpp  types.hpp
SECS/utility/impl/: math.inl  memory.inl  range.inl  type_id.inl
include/: callback_chain.cpp  callback_chain.hpp  component.cpp  component.hpp  engine.hpp  entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  entity_routine.hpp  event_manager.cpp  event_manager.hpp  meta.hpp  object_pool.cpp  object_pool.hpp  object_pool.inl  parameter_pack.hpp  type_id.hpp  type_set.hpp  utility.hpp
include/SECS/: common.hpp  component.hpp  debug.hpp  engine.hpp  entity.hpp  entity_manager.hpp  entity_view.hpp  event.hpp  event_manager.hpp  memory.hpp  secs.hpp  utility.hpp
include/SECS/collections/: callback_storage.hpp  collections.hpp  component_pool.hpp  entity_pool.hpp  entity_view.hpp  linked_metadata.hpp  sparse_map.hpp  sparse_map_view.hpp  vector.hpp  view.hpp
include/SECS/collections/impl/: callback_storage.inl  collections.inl  component_pool.inl  entity_pool.inl  entity_view.inl  linked_metadata.inl  sparse_map.inl  sparse_map_view.inl  vector.inl  view.inl
include/SECS/impl/: component.inl  debug.inl  engine.inl  entity.inl  entity_view.inl  event.inl  event_manager.inl  memory.inl  secs.inl
include/SECS/utility/: math.hpp  memory.hpp  range.hpp  type_id.hpp  types.hpp
include/SECS/utility/impl/: math.inl  range.inl
include/collections/: sparse_map.hpp  vector.hpp  view.hpp
include/collections/impl/: sparse_map.inl  vector.inl  view.inl
include/impl/: callback_chain.inl  component.inl  engine.inl  entity.inl  entity_manager.inl  entity_routine.inl  event_manager.inl  meta.inl  object_pool.inl
include/utility/: math.hpp  memory.hpp  range.hpp  repeat.hpp  types.hpp
include/utility/impl/: math.inl  memory.inl  range.inl
test/: main.cpp  object_pool_test.cpp
test/src/: main.cpp
